some websocket communication

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
     <button>Create player</button>
     <button id="change">Change display name</button>
     <button id="get">Get player</button>
+    <button id="save">Save server data</button>
 </body>
 
 </html>
