added LocalPlayer class

--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,10 @@
 <body>
     <h1>DnD Interactive</h1>
 
-    <button>Create player</button>
+    <button id="create">Create player</button>
     <button id="change">Change display name</button>
     <button id="get">Get player</button>
+    <button id="login">Log in</button>
     <button id="save">Save server data</button>
 </body>
 
