refactored just about everything

--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,12 @@
 <body>
     <h1>DnD Interactive</h1>
 
-    <button id="create">Create player</button>
-    <button id="change">Change display name</button>
-    <button id="get">Get player</button>
+    <input type="email" id="loginEmail">
+    <input type="password" id="loginPassword">
     <button id="login">Log in</button>
+
+    <button id="create">Create game</button>
+
     <button id="save">Save server data</button>
 </body>
 
