encrypt password and email

--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,10 @@
 <body>
     <h1>DnD Interactive</h1>
 
-    <input type="email" id="loginEmail">
-    <input type="password" id="loginPassword">
+    <input type="email" id="loginEmail" value="dummy@email.com">
+    <input type="password" id="loginPassword" value="wowzer">
     <button id="login">Log in</button>
+    <button id="signup">Sign up</button>
 
     <button id="create">Create game</button>
 
