introduced game board

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/session.css">
     <title>DnD Interactive</title>
     <script defer src="main.dart.js"></script>
 </head>
@@ -22,6 +23,14 @@
     <button id="create">Create game</button>
 
     <button id="save">Save server data</button>
+
+    <div id="session">
+        <div id="boardContainer">
+            <div id="board">
+                <img id="ground" src="https://via.placeholder.com/500" draggable="false">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
