--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,9 @@
         <div id="boardContainer">
             <div id="board">
                 <img id="ground" src="https://via.placeholder.com/500" draggable="false">
+                <div id="grid">
+                    <canvas></canvas>
+                </div>
             </div>
         </div>
     </div>
