made movable access a bool

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
     <div id="session">
         <div id="boardContainer">
             <div id="board">
-                <img id="ground" src="https://via.placeholder.com/500">
+                <img id="ground" src="https://via.placeholder.com/500" width="500" height="500">
                 <div id="grid">
                     <canvas></canvas>
                 </div>
