actual networking hell yeah

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,8 @@
     <button id="login">Log in</button>
     <button id="signup">Sign up</button>
 
+    <button id="join">Join session</button>
+
     <button id="create">Create game</button>
 
     <button id="save">Save server data</button>
