introduced html notifications

--- a/web/index.html
+++ b/web/index.html
@@ -38,14 +38,7 @@
         </div>
     </div>
 
-    <div id="notifications">
-        <div class="notification">
-            <span><b>Guy</b> wants to join.</span>
-
-            <button class="icon good"><i class="fas fa-check"></i></button>
-            <button class="icon bad"><i class="fas fa-times"></i></button>
-        </div>
-    </div>
+    <div id="notifications"></div>
 </body>
 
 </html>
