game join verification flow complete

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,23 @@
     </div>
 
     <div id="notifications"></div>
+
+    <div id="overlay">
+        <div id="charPick">
+            <span>Pick dude's character</span>
+            <div class="roster">
+                <div class="char">
+                    <img
+                        src="https://64.media.tumblr.com/5ca0c9b3ed97010cb6be2b3325799550/tumblr_pbr8lq7flr1r62wcxo1_1280.png">
+                    <span>Novel</span>
+                </div>
+                <div class="char">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png">
+                    <span>Lor</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
