limit to 20 characters

--- a/web/index.html
+++ b/web/index.html
@@ -51,9 +51,8 @@
             </div>
             <div>
                 <h3>Playable Characters</h3>
-                <div id="editChars">
-                    <button id="addChar" class="big">New Character</button>
-                </div>
+                <div id="editChars"></div>
+                <button id="addChar" class="big">New Character</button>
             </div>
 
             <button class="save">Save</button>
