change title when someone wants to join

--- a/web/index.html
+++ b/web/index.html
@@ -8,13 +8,13 @@
     <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/game.css">
-    <title>DnD Interactive</title>
+    <title>D&D Interactive</title>
     <script defer src="main.dart.js"></script>
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>DnD Interactive</h1>
+    <h1>D&D Interactive</h1>
 
     <input type="email" id="loginEmail" value="dummy@email.com">
     <input type="password" id="loginPassword" value="wowzer">
