introduced image upload flow

--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,20 @@
     <div id="notifications"></div>
 
     <div id="overlay">
+        <div class="panel show" id="uploadPanel">
+            <h2>Upload Image</h2>
+            <div>
+                <img>
+                <canvas width="256" height="256"></canvas>
+                <label class="file-upload">
+                    Drag file here
+                    <input id="imgUpload" type="file" accept="image/*">
+                </label>
+            </div>
+
+            <button type="submit">Upload</button>
+        </div>
+
         <div class="panel" id="editGamePanel">
             <h2>Campaign Settings</h2>
             <div>
