cancel image upload

--- a/web/index.html
+++ b/web/index.html
@@ -61,6 +61,10 @@
 
         <div class="panel" id="uploadPanel">
             <h2>Upload Image</h2>
+            <button class="close">
+                <i class="fas fa-times"></i>
+            </button>
+
             <div>
                 <div id="crop">
                     <div class="width top" style="cursor: n-resize;"></div>
