added close button to campaign editor

--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,10 @@
     <div id="overlay">
         <div class="panel" id="editGamePanel">
             <h2>Campaign Settings</h2>
+            <button class="close">
+                <i class="fas fa-times"></i>
+            </button>
+
             <div>
                 <h3>Name</h3>
                 <input id="gameName" placeholder="Campaign name...">
