made campaigns deletable

--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,9 @@
                 <button id="addChar" class="big">New Character</button>
             </div>
 
-            <button class="save">Save</button>
+            <button id="delete" class="bad">Delete Campaign</button>
+
+            <button id="save">Save</button>
         </div>
 
         <div class="panel" id="uploadPanel">
