designed dark mode

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="dark-mode">
     <h1>D&D Interactive</h1>
 
     <input type="email" id="loginEmail" value="dummy@email.com">
