upload scene ground image

--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,11 @@
 
     <section id="session">
         <div id="boardContainer">
+            <div class="controls">
+                <button id="changeImage">Change image</button>
+            </div>
             <div id="board">
-                <img id="ground" src="https://via.placeholder.com/500" width="500" height="500">
+                <img id="ground" src="https://via.placeholder.com/500">
                 <div id="grid">
                     <canvas></canvas>
                 </div>
