notify players of scene update

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
     <input type="password" id="loginPassword" value="wowzer">
     <button id="login">Log in</button>
     <button id="signup">Sign up</button>
+    <button id="joinDemo">Join session</button>
     <button id="save">Save server data</button>
 
     <section id="home" class="show">
