introduced grid aligning

--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
         <div id="boardContainer">
             <div class="controls">
                 <button id="changeImage">Change image</button>
+                <button id="editGrid">Edit grid</button>
             </div>
             <div id="board">
                 <img id="ground" src="https://via.placeholder.com/500">
