modifiable cell size

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,12 @@
             <div class="controls">
                 <button id="changeImage">Change image</button>
                 <button id="editGrid">Edit grid</button>
+                <div id="gridControls" class="disabled">
+                    <span>
+                        Cell size:
+                        <input id="gridSize" placeholder="Cell size in pixels..." type="number" min="8" value="100">
+                    </span>
+                </div>
             </div>
             <div id="board">
                 <img id="ground" src="https://via.placeholder.com/500">
