introduced scene selector

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,11 @@
 
     <section id="session">
         <div id="boardContainer">
-            <div class="controls">
+            <div class="controls panel">
+                <h3>Scene Editor</h3>
+                <div id="scenes">
+                    <button id="addScene" class="big">Add scene</button>
+                </div>
                 <button id="changeImage">Change image</button>
                 <button id="editGrid">Edit grid</button>
                 <div id="gridControls" class="disabled">
