made scene selector a hooked panel

--- a/web/index.html
+++ b/web/index.html
@@ -44,8 +44,14 @@
                         </span>
                     </div>
                 </div>
-                <div id="sceneSelector" class="controls panel">
+                <div id="sceneSelector" class="controls panel hooked">
                     <h3>Scene Selector</h3>
+                    <span class="top-hook">
+                        <div>
+                            <i class="fas fa-chevron-up"></i>
+                            Scene Selector
+                        </div>
+                    </span>
                     <div id="scenes">
                         <button id="addScene" class="big">Add scene</button>
                     </div>
