added grid color controls

--- a/web/index.html
+++ b/web/index.html
@@ -38,9 +38,11 @@
                     <button id="changeImage">Change image</button>
                     <button id="editGrid">Edit grid</button>
                     <div id="gridControls" class="disabled">
-                        <span>
-                            Cell size:
+                        <span>Cell size:
                             <input id="gridSize" placeholder="Cell size in pixels..." type="number" min="8" value="100">
+                        </span>
+                        <span>Color:
+                            <input id="gridColor" type="color" value="#000000">
                         </span>
                     </div>
                 </div>
