introduced dice rolling

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,13 @@
 
         <section id="session">
             <div id="boardContainer">
+                <div id="playerControls" class="controls">
+                    <button class="icon">
+                        Roll Dice
+                        <i class="fas fa-dice-d20"></i>
+                        <table id="dice"></table>
+                    </button>
+                </div>
                 <div id="sceneEditor" class="controls panel">
                     <h3>Scene Editor</h3>
                     <button id="changeImage">Change image</button>
