added game log and improved dice rolling

--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,7 @@
                     <div id="grid"></div>
                 </div>
             </div>
+            <div id="log"></div>
         </section>
     </div>
 
