only display gm tools for gm

--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
                         <table id="dice"></table>
                     </button>
                 </div>
-                <div id="sceneEditor" class="controls panel">
+                <div id="sceneEditor" class="controls panel gm">
                     <h3>Scene Editor</h3>
                     <button id="changeImage">Change image</button>
                     <button id="editGrid">Edit grid</button>
@@ -53,7 +53,7 @@
                         </span>
                     </div>
                 </div>
-                <div id="sceneSelector" class="controls panel hooked">
+                <div id="sceneSelector" class="controls panel gm hooked">
                     <h3>Scene Selector</h3>
                     <span class="top-hook">
                         <div>
