added light/dark mode switch

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,9 @@
             <button id="signup">Sign up</button>
             <button id="joinDemo">Join session</button>
             <button id="save">Save server data</button>
+            <button id="brightness" class="icon" title="Toggle light/dark mode">
+                <i class="fas fa-adjust"></i>
+            </button>
         </span>
     </header>
 
