--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
                     </span>
                 </div>
             </div>
+            <button id="myAccount">My Account</button>
             <button id="joinDemo">Join session</button>
             <button id="save">Save server data</button>
             <button id="brightness" class="icon" title="Toggle light/dark mode">
