keep users logged in with local token

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
 
     <div id="content">
         <section id="home" class="show">
-            <div id="loginTab">
+            <div id="loginTab" class="hidden">
                 <h1>Sign in to D&D Interactive</h1>
 
                 <p>
