added log out button

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
         <h1>D&D Interactive</h1>
 
         <span>
-            <button id="myAccount">My Account</button>
+            <button id="logOut" class="hidden">Log Out</button>
             <button id="joinDemo">Join session</button>
             <button id="save">Save server data</button>
             <button id="brightness" class="icon" title="Toggle light/dark mode">
