--- a/web/index.html
+++ b/web/index.html
@@ -87,6 +87,32 @@
                         </span>
                     </div>
                 </div>
+                <div id="prefabPalette" class="controls panel gm">
+                    <h3>Prefab Palette</h3>
+                    <div id="pcPrefabs" class="prefab-container"></div>
+                    <div id="otherPrefabs" class="prefab-container">
+                        <button id="addPrefab" class="icon">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+
+                    <div id="prefabProperties" class="disabled">
+                        <span>Default size:
+                            <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
+                        </span>
+                        <span>Name:
+                            <input id="prefabName" type="text">
+                        </span>
+                    </div>
+                </div>
+                <div id="selectionProperties" class="controls panel gm">
+                    <span>Size:
+                        <input id="movableSize" placeholder="Size..." type="number" min="0" value="25">
+                    </span>
+                    <span>Name:
+                        <input id="name" type="color" value="#000000">
+                    </span>
+                </div>
                 <div id="sceneSelector" class="controls panel gm hooked">
                     <h3>Scene Selector</h3>
                     <span class="top-hook">
@@ -168,17 +194,7 @@
 
         <div id="charPick" class="panel">
             <span>Pick dude's character</span>
-            <div class="roster">
-                <div class="char">
-                    <img
-                        src="https://64.media.tumblr.com/5ca0c9b3ed97010cb6be2b3325799550/tumblr_pbr8lq7flr1r62wcxo1_1280.png">
-                    <span>Novel</span>
-                </div>
-                <div class="char">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png">
-                    <span>Lor</span>
-                </div>
-            </div>
+            <div class="roster"></div>
         </div>
 
         <div class="panel" id="registerPanel">
