fixed prefab creation

--- a/web/index.html
+++ b/web/index.html
@@ -91,12 +91,13 @@
                     <h3>Prefab Palette</h3>
                     <div id="pcPrefabs" class="prefab-container"></div>
                     <div id="otherPrefabs" class="prefab-container">
-                        <button id="addPrefab" class="icon">
+                        <button id="addPrefab" class="icon" title="Add prefab">
                             <i class="fas fa-plus"></i>
                         </button>
                     </div>
 
                     <div id="prefabProperties" class="disabled">
+                        <h3>Properties</h3>
                         <span>Default size:
                             <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
                         </span>
