made prefab image changeable

--- a/web/index.html
+++ b/web/index.html
@@ -98,11 +98,15 @@
 
                     <div id="prefabProperties" class="disabled">
                         <h3>Properties</h3>
-                        <span>Default size:
-                            <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
-                        </span>
+                        <div id="prefabImage" class="edit-img">
+                            <div>Change</div>
+                            <img>
+                        </div>
                         <span>Name:
                             <input id="prefabName" type="text">
+                        </span>
+                        <span>Default size:
+                            <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
                         </span>
                     </div>
                 </div>
